Front page done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <link rel="stylesheet" href="./mystyle.css">
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="main-page">
+            <div class="nav">
+                <div class="logo">Header Logo</div>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link two</a></li>
+                </ul>
+            </div>
+            <div class="front-page">
+                <div class="main">
+                    <div class="main-text">This website is awesome</div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam veritatis nisi voluptate voluptatem consequatur blanditiis.
+                    </p>
+                    <button>Sign up</button>
+                </div>
+                <div class="img">
+                    this is a placeholder for an image
+                </div>
+            </div>
+        </div>
+        <div class="rando-info">
 
+        </div>
+        <div class="quote">
+
+        </div>
+        <div class="signup">
+
+        </div>
+        <div class="footer">
+             
+        </div>
+    </div>
 </body>
 </html>
