--- a/index.html
+++ b/index.html
@@ -31,16 +31,44 @@
             </div>
         </div>
         <div class="rando-info">
-
+            <div class="randotext">Some random information.</div>
+            <div class="cards">
+                <div class="card">
+                    <div></div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, quasi.</p>
+                </div>
+                <div class="card">
+                    <div></div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, quasi.</p>
+                </div>
+                <div class="card">
+                    <div></div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, quasi.</p>
+                </div>
+                <div class="card">
+                    <div></div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, quasi.</p>
+                </div>
+                
+            </div>
         </div>
         <div class="quote">
-
+            <div>
+                <p class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi accusantium iure rerum, earum id porro aperiam aliquid quae. Adipisci doloremque rerum nulla ut id nemo officia inventore, culpa accusantium commodi!</p>
+                <p class="author">-Thor, God Of Thunder</p>
+            </div>
         </div>
         <div class="signup">
-
+            <div class="signup-form">
+                <div>
+                    <div class="signup-text">Call to actin! It's Time!</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, non.</p>
+                </div>
+                <button>Sign Up</button>
+            </div>
         </div>
         <div class="footer">
-             
+            Copyright &#169 The Odin Project 2024, July 3
         </div>
     </div>
 </body>
